objects/APTS_Quotation_Stage__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <description>Custom setting holds records for Quote Stage values which are used in Chevron</description>
    <fields>
        <fullName>APTS_Chevron_Label__c</fullName>
        <description>Value will be used as text for Quotation Chevron</description>
        <inlineHelpText>Value will be used as text for Quotation Chevron</inlineHelpText>
        <label>Chevron Label</label>
        <length>250</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APTS_Chevron_Value__c</fullName>
        <description>Holds values of Approval Stage picklist. Used to highlight value in Chevron - Quotation</description>
        <inlineHelpText>Value of Approval Stage on Quotation</inlineHelpText>
        <label>Chevron Value</label>
        <length>250</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APTS_Default_Text__c</fullName>
        <label>Default Text</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APTS_Dependent_Values__c</fullName>
        <description>Values which are depended for this value</description>
        <inlineHelpText>Values which are depended for this value (applicable only for sales stage)</inlineHelpText>
        <label>Dependent Values</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>APTS_Display_Label__c</fullName>
        <label>Display Label</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APTS_IsSalesStage__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Identifies whether stage is sales stage or quotation stage</description>
        <inlineHelpText>Identifies whether stage is sales stage or quotation stage</inlineHelpText>
        <label>IsSalesStage</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>APTS_IsSkipNext__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Skips the next value</description>
        <inlineHelpText>Check this if you want to skip next block in chevron. Also put width accordingly.</inlineHelpText>
        <label>IsSkipNext</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>APTS_Sorting_Value__c</fullName>
        <description>Index of chevron value</description>
        <inlineHelpText>Index of chevron value</inlineHelpText>
        <label>Sorting Value</label>
        <precision>18</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>APTS_Width__c</fullName>
        <label>Width</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <label>APTS Quotation Stage</label>
</CustomObject>